--- a/public/style/presentation.css
+++ b/public/style/presentation.css
@@ -38,3 +38,17 @@ body {
     bottom: 240px;
     width: 100%;
 }
+body {
+    animation: fadeInAnimation ease 1s;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
+  }
+  
+  @keyframes fadeInAnimation {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+     }
+  }
